NEXT RELEASE
 - Remove the option definition property.
 - Rename o.extend to o.augment.
 - Rename the default definition property to devoid.
 - Rename the extends definition property to augments.
 - Rename the isa definition property to type.
 - New primitive and object types for boolean, string, and number.
 - Added the nonEmptyString type.
 - Rename the extends type to instanceOf.
 - Added the typeOf type.
 - New attribute extention (o-attribute.js).

0.0.3 : 2013-03-24
 - New types extension (o-types.js).

0.0.2 : 2013-03-18
 - Added o.construct.
 - o.extend now accepts a third argument to specify properties for the prototype.
 - Full test coverage of the Core API.
 - Fixed around to handle return values.
 - Fixed o.extend to properly inherit the parent's prototype
   instead of merging it with the child's.
 - Default isa to "object" if extends is set.

0.0.1 : 2013-03-10
 - First release!
